@startuml

enum MealItemStatus {
  Received
  Preparing
  Completed
}

enum OrderStatus {
  Received
  Preparing
  Completed
  Cancelled
}

class Order {
  table_id: u32
  order_id: Uuid
  total_cooking_time_in_min: u32
  total_price: f64
  creation_time: DateTime
  update_time: DateTime
  add_meal_items()
  get_meal_items()
  remove_meal_items()
}

class MealItem {
  meal_item_id: Uuid
  creation_time: DateTime
  update_time: DateTime
  cooking_time_in_min: u32
  is_removed: bool
  status: MealItemStatus
  remove()
  update_status()
}

Order "1" *-- "many" MealItem : contains

class MenuItem {
    menu_item_id: Uuid
    name: String
    price: f64
    new()
}

MenuItem "many" --> "1" MealItem: against a

class Menu {
    menu_id: Uuid
    name: String
    new()
    add_menu_items()
}

Menu "1" *-- "many" MenuItem : contains

@enduml